# periphery-capture-system

./: .gitignore  LICENSE  README.md  audio_device_configs.json  camera_functionality.py  cameras_configs.json  cameras_device_configs.json  comms_sent_test.py  comms_test.py  core.py  device_helper.py  main.py  pyproject.toml  run_stream.py  save_frames.py  save_images.py  save_images_from_stream.py  save_video.py  save_video_from_stream.py  setup.cfg  start_audio.py  start_audio_stream.py  start_stream.py  test_audio_stream.py  test_stream.py  test_video_stream.py  visualize_stream.py
camera_capture_system/: __init__.py  camera.py  cameraIO.py  core.py  datamodel.py  deviceIO.py  fileIO.py  main.py  zmqIO.py
configs/: cameras_device_configs.json  devices.json  raw_devices.json
device_capture_system/: __main__.py  core.py  datamodel.py  deviceIO.py  fileIO.py  zmqIO.py
periphery_capture_system/: __init__.py  core.py  datamodel.py  deviceIO.py  zmqIO.py
tests/: test_camera.py  test_cameraIO.py  test_camera_funtionality.py  test_core.py  test_datamodel.py  test_datamodel_base_classes.py  test_datamodel_inherit_classes.py  test_device_io.py  test_device_io_functions.py  test_device_io_readers.py  test_streaming.py  test_zmqIO.py
