[tool.poetry]
name = "camera-capture-system"
version = "1.0.1"
description = "camera capture system to capture and maintain connection to multiple cameras, syncronise them and send the images over zeromq"
authors = ["kristina-aino <kristina.ai@proton.me>"]
readme = "README.md"
packages = [{include = "camera_capture_system"}]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^25.1"
opencv-python = "^4.8"
numpy = "^1.26"
pydantic = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
