[tool.poetry]
name = "device-capture-system"
version = "1.1.0"
description = "device capture system to capture and maintain connection to multiple cameras and microphone to send data over zmq"
authors = ["freya-aino <freya.aino@pm.me>"]
readme = "README.md"
packages = [{include = "device_capture_system"}]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^25.1"
opencv-python = "^4.8"
numpy = "^2.2"
pydantic = "^2.5"
av = "^12.1.0"
progress = "^1.6"
pillow = "^10.3.0"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
