[metadata]
name = camera_capture_system
version = 0.9.0
description = "camera capture system, useed to capture an arbitrary number of cameras and send the video stream over network to be used downstream"
author = "Kristina aino"
author_email = "kristina.ai@proton.me"

[options]
python_requires = ">=3.10"
packages = find:

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    myproject = camera_capture_system.main:run